--- a/ai-rules.yaml
+++ b/ai-rules.yaml
@@ -1,6 +1,6 @@
-# 分流规则集 - Grok (xAI), ChatGPT (OpenAI), Gemini (Google AI) 智能捕获版
-# 描述: AI 流量专用远程规则集，支持新增子域自动匹配，不绑定代理组
-# 版本: 2.8 (2025-10-10 AI智能捕获远程规则)
+# 分流规则集 - Grok (xAI), ChatGPT (OpenAI), Gemini (Google AI) 智能捕获升级版
+# 描述: AI 流量专用远程规则集，补全漏掉的 Gemini 子域，支持未来新增域名自动匹配
+# 版本: 2.9 (2025-10-10 AI智能捕获升级远程规则)
 # 使用: RULE-SET,ai-rules,PROXY  # 调用时指定 PROXY
 
 payload:
@@ -17,8 +17,7 @@ payload:
   - DOMAIN-SUFFIX,static.grok.com
   - DOMAIN-SUFFIX,grokusercontent.com
   - DOMAIN-SUFFIX,grokcdn.com
-  # 智能捕获未知 Grok 子域
-  - DOMAIN-KEYWORD,grok
+  - DOMAIN-KEYWORD,grok       # 智能捕获未知 Grok 子域
 
   # -----------------------------
   # ChatGPT (OpenAI) 流量
@@ -48,9 +47,8 @@ payload:
   - DOMAIN-SUFFIX,challenges.cloudflare.com
   - DOMAIN-SUFFIX,rum.browser-intake-datadoghq.com
   - DOMAIN-SUFFIX,sentry.io
-  # 智能捕获未知 ChatGPT / OpenAI 子域
-  - DOMAIN-KEYWORD,openai
-  - DOMAIN-KEYWORD,chatgpt
+  - DOMAIN-KEYWORD,openai     # 智能捕获未知 OpenAI 域
+  - DOMAIN-KEYWORD,chatgpt    # 智能捕获未知 ChatGPT 域
 
   # -----------------------------
   # Gemini (Google AI) 流量
@@ -61,7 +59,9 @@ payload:
   - DOMAIN-SUFFIX,ai.google.dev
   - DOMAIN-SUFFIX,aistudio.google.com
   - DOMAIN-SUFFIX,play.googleapis.com
-  # 智能捕获未知 Gemini / Google AI 子域
-  - DOMAIN-KEYWORD,generativelanguage
-  - DOMAIN-KEYWORD,bard
-  - DOMAIN-KEYWORD,ai.google
+  - DOMAIN-SUFFIX,oauth2.googleapis.com
+  - DOMAIN-SUFFIX,oauthaccountmanager.googleapis.com
+  - DOMAIN-SUFFIX,proactivebackend-pa.googleapis.com
+  - DOMAIN-KEYWORD,generativelanguage      # 智能捕获未来 Generative Language API 子域
+  - DOMAIN-KEYWORD,bard                    # 智能捕获未来 Bard 子域
+  - DOMAIN-KEYWORD,ai.google               # 智能捕获未来 Google AI 子域
