--- a/ai-rules.yaml
+++ b/ai-rules.yaml
@@ -1,10 +1,9 @@
 # -----------------------------
 # Ai 分流 - 完整升级版远程规则集
 # 描述: Grok (xAI), ChatGPT (OpenAI), Gemini (Google AI) 智能捕获升级版
-# 版本: 2.10 (2025-10-10 最终补全)
+# 版本: 2.20 (2025-10-12 补全核心 API)
 # 使用: RULE-SET,ai-rules,Ai 分流
 # -----------------------------
-
 payload:
   # -----------------------------
   # Grok (xAI) 流量
@@ -19,6 +18,10 @@ payload:
   - DOMAIN-SUFFIX,static.grok.com
   - DOMAIN-SUFFIX,grokusercontent.com
   - DOMAIN-SUFFIX,grokcdn.com
+  - DOMAIN-SUFFIX,api.grok.ai
+  - DOMAIN-SUFFIX,gateway.x.ai
+  - DOMAIN-SUFFIX,messaging.x.ai
+  - DOMAIN-SUFFIX,subscriptions.x.ai
   - DOMAIN-KEYWORD,grok       # 智能捕获未知 Grok 子域
 
   # -----------------------------
@@ -26,22 +29,28 @@ payload:
   # -----------------------------
   - DOMAIN-SUFFIX,openai.com
   - DOMAIN-SUFFIX,chat.openai.com
+  - DOMAIN-SUFFIX,platform.openai.com
+  - DOMAIN-SUFFIX,api.openai.com
+  - DOMAIN-SUFFIX,beta.openai.com
   - DOMAIN-SUFFIX,chatgpt.com
   - DOMAIN-SUFFIX,oaiusercontent.com
   - DOMAIN-SUFFIX,oaistatic.com
+  - DOMAIN-SUFFIX,cdn.oaistatic.com
   - DOMAIN-SUFFIX,ai.com
   - DOMAIN-SUFFIX,auth0.com
   - DOMAIN-SUFFIX,auth0.openai.com
+  - DOMAIN-SUFFIX,edge.auth0.com
   - DOMAIN-SUFFIX,cdn.auth0.com
-  - DOMAIN-SUFFIX,algolia.net
   - DOMAIN-SUFFIX,api.statsig.com
+  - DOMAIN-SUFFIX,events.statsig.com
   - DOMAIN-SUFFIX,statsig.com
   - DOMAIN-SUFFIX,intercom.io
+  - DOMAIN-SUFFIX,intercomcdn.com
   - DOMAIN-SUFFIX,stripe.com
   - DOMAIN-SUFFIX,hcaptcha.com
-  - DOMAIN-SUFFIX,vimeo.com
-  - DOMAIN-SUFFIX,vimeocdn.com
-  - DOMAIN-SUFFIX,akamaized.com
+  - DOMAIN-SUFFIX,talkjs.com
+  - DOMAIN-SUFFIX,pendo.io
+  - DOMAIN-SUFFIX,pendo-static.s3.amazonaws.com
   - DOMAIN,openaiapi-site.azureedge.net
   - DOMAIN-SUFFIX,chatgpt.livekit.cloud
   - DOMAIN,browser-intake-datadoghq.com
@@ -64,7 +73,21 @@ payload:
   - DOMAIN-SUFFIX,oauth2.googleapis.com
   - DOMAIN-SUFFIX,oauthaccountmanager.googleapis.com
   - DOMAIN-SUFFIX,proactivebackend-pa.googleapis.com
-  - DOMAIN-SUFFIX,notifications-pa.googleapis.com  # 新增补全
+  - DOMAIN-SUFFIX,notifications-pa.googleapis.com
+  - DOMAIN-SUFFIX,recordinguploader-pa.googleapis.com
+  - DOMAIN-SUFFIX,assistantembedded.googleapis.com
+  - DOMAIN-SUFFIX,speech.googleapis.com
+  - DOMAIN-SUFFIX,stt.googleapis.com
+  - DOMAIN-SUFFIX,tts.googleapis.com
   - DOMAIN-KEYWORD,generativelanguage      # 智能捕获未来 Generative Language API 子域
   - DOMAIN-KEYWORD,bard                    # 智能捕获未来 Bard 子域
   - DOMAIN-KEYWORD,ai.google               # 智能捕获未来 Google AI 子域
+
+  # -----------------------------
+  # 🚀 可选扩展区（未来可用）
+  # -----------------------------
+  # - DOMAIN-SUFFIX,claude.ai
+  # - DOMAIN-SUFFIX,anthropic.com
+  # - DOMAIN-SUFFIX,perplexity.ai
+  # - DOMAIN-SUFFIX,copilot.microsoft.com
+  # - DOMAIN-SUFFIX,deepseek.com
