--- a/.github/workflows/sync-to-cnb.yml
+++ b/.github/workflows/sync-to-cnb.yml
@@ -14,7 +14,6 @@ jobs:
     
     steps:
       # 步骤 1: 检查代码到工作区
-      # fetch-depth: 0 确保下载完整的 Git 历史，有助于同步
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -22,17 +21,13 @@ jobs:
       # 步骤 2: 使用 Git Sync 插件推送到 CNB
       - name: Push to CNB Repository
         run: |
-          # 使用 Docker 运行 Git Sync 插件进行同步
+          # 请特别注意，每一行末尾的 \ 后面都没有空格！
           docker run --rm \
             -v ${{ github.workspace }}:${{ github.workspace }} \
             -w ${{ github.workspace }} \
-            # CNB 目标仓库地址（已替换）
             -e PLUGIN_TARGET_URL="https://cnb.cool/xiyingruyi/Stash-rules.git" \
             -e PLUGIN_AUTH_TYPE="https" \
-            # CNB Git Username（请确保 "cnb" 是正确的）
-            -e PLUGIN_USERNAME="cnb" \ 
-            # CNB 访问令牌，从 GitHub Secrets 中安全引用（已确认 Secret Name 为 CNB）
+            -e PLUGIN_USERNAME="cnb" \
             -e PLUGIN_PASSWORD=${{ secrets.CNB }} \
-            # 强制推送，确保 CNB 内容完全覆盖
             -e PLUGIN_FORCE="true" \
             tencentcom/git-sync
