--- a/.github/workflows/sync-to-cnb.yml
+++ b/.github/workflows/sync-to-cnb.yml
@@ -1,21 +1,44 @@
 name: Sync to CNB
-on: 
+
+# 当代码推送到任何分支时触发同步
+on:
   push:
     branches:
-      - '**'
+      - '**' # 匹配所有分支的推送操作
+
 jobs:
   sync:
-    if: >-
-      github.repository == 'xiyingruyi/Stash-rules' &&
-      !contains(github.event.head_commit.message, '[SKIP-CN]')  # 跳过 CNB 回推
+    # 确保只在 GitHub 的主仓库运行
+    if: github.repository == 'xiyingruyi/Stash-rules'
     runs-on: ubuntu-latest
+    
     steps:
+      # 步骤 1: 检查代码到工作区（获取完整历史记录，这是 git-sync 的常见要求）
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-      - name: Push to CNB & Add Skip Tag
+          fetch-depth: 0 
+
+      # 步骤 1.5: 【防止循环】检查提交信息是否包含CNB同步标记
+      - name: Check for CNB Sync Tag
+        id: check_sync
         run: |
-          # 运行 git-sync 同步到 CNB
+          # 获取当前触发 Action 的 HEAD 提交信息
+          COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
+          
+          # 核心判断：如果提交信息包含 [CNB:SYNC] 标记，则跳过本次同步
+          # 这个标记必须由 CNB 在同步到 GitHub 时加入
+          if [[ $COMMIT_MESSAGE == *"[CNB:SYNC]"* ]]; then
+            echo "::notice file=README.md::Commit message contains [CNB:SYNC]. Skipping sync to CNB to prevent loop."
+            echo "should_sync=false" >> $GITHUB_OUTPUT
+          else
+            echo "should_sync=true" >> $GITHUB_OUTPUT
+          fi
+          
+      # 步骤 2: 只有在不是 CNB 同步推送时，才执行同步到 CNB 的操作
+      - name: Push to CNB Repository
+        if: steps.check_sync.outputs.should_sync == 'true'
+        run: |
+          # 请特别注意，每一行末尾的 \ 后面都没有空格！
           docker run --rm \
             -v ${{ github.workspace }}:${{ github.workspace }} \
             -w ${{ github.workspace }} \
@@ -25,15 +48,3 @@ jobs:
             -e PLUGIN_PASSWORD=${{ secrets.CNB }} \
             -e PLUGIN_FORCE="true" \
             tencentcom/git-sync
-          # Hack: 如果有变更，添加 [SKIP-CN] 到 CNB 最新 commit message
-          cd ${{ github.workspace }}
-          if ! git diff --quiet HEAD~1; then  # 检查是否有变更
-            git log -1 --pretty=%B > temp_msg.txt
-            echo " [SKIP-CN]" >> temp_msg.txt  # 添加标签到末尾
-            # 注意：这修改本地，但 CNB 已 push；为同步，需额外 push 到 CNB（如果 CNB 支持 amend）
-            # 简化：标签主要用于 CNB 过滤回推，无需本地 amend
-            echo "Added [SKIP-CN] tag for CNB filter"
-          else
-            echo "No changes, skip tag"
-          fi
-          rm -f temp_msg.txt
