--- a/.github/workflows/sync-to-cnb.yml
+++ b/.github/workflows/sync-to-cnb.yml
@@ -44,7 +44,10 @@ jobs:
             -w ${{ github.workspace }} \
             -e PLUGIN_TARGET_URL="https://cnb.cool/xiyingruyi/Stash-rules.git" \
             -e PLUGIN_AUTH_TYPE="https" \
-            -e PLUGIN_USERNAME="cnb" \
+            -e PLUGIN_USERNAME="xiyingruyi" \
             -e PLUGIN_PASSWORD=${{ secrets.CNB }} \
             -e PLUGIN_FORCE="true" \
+            -e PLUGIN_SYNC_MODE="push" \
+            -e PLUGIN_PUSH_TAGS="true" \
             tencentcom/git-sync
+          echo "Synced to CNB successfully"
