--- a/.github/workflows/sync-to-cnb.yml
+++ b/.github/workflows/sync-to-cnb.yml
@@ -1,22 +1,44 @@
-      # 新增：预拉取 CNB 变化并 merge（替换原 Push 步骤前）
-      - name: Pre-merge with CNB
-        if: steps.check_sync.outputs.should_sync == 'true'
+name: Sync to CNB
+
+# 当代码推送到任何分支时触发同步
+on:
+  push:
+    branches:
+      - '**' # 匹配所有分支的推送操作
+
+jobs:
+  sync:
+    # 确保只在 GitHub 的主仓库运行
+    if: github.repository == 'xiyingruyi/Stash-rules'
+    runs-on: ubuntu-latest
+    
+    steps:
+      # 步骤 1: 检查代码到工作区（获取完整历史记录，这是 git-sync 的常见要求）
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 
+
+      # 步骤 1.5: 【防止循环】检查提交信息是否包含CNB同步标记
+      - name: Check for CNB Sync Tag
+        id: check_sync
         run: |
-          # 配置 Git
-          git config user.name "Sync Bot"
-          git config user.email "sync-bot@github.com"
-          # 添加 CNB 作为远程（临时）
-          git remote add cnb https://xiyingruyi:${{ secrets.CNB }}@cnb.cool/xiyingruyi/Stash-rules.git || true
-          git fetch cnb
-          # 尝试 merge（如果冲突，自动创建 merge commit）
-          git merge cnb/main --no-ff -m "Merge CNB changes [CNB:SYNC]"
-          # 如果有冲突，git 会暂停；这里用 --no-edit 跳过编辑
-          # 推送到 CNB 前 commit 合并结果
-          git push github main  # 先推回 GitHub（可选）
-      # 原 Push 步骤保持，但去掉 force（用 PLUGIN_FORCE="false"）
+          # 获取当前触发 Action 的 HEAD 提交信息
+          COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
+          
+          # 核心判断：如果提交信息包含 [CNB:SYNC] 标记，则跳过本次同步
+          # 这个标记必须由 CNB 在同步到 GitHub 时加入
+          if [[ $COMMIT_MESSAGE == *"[CNB:SYNC]"* ]]; then
+            echo "::notice file=README.md::Commit message contains [CNB:SYNC]. Skipping sync to CNB to prevent loop."
+            echo "should_sync=false" >> $GITHUB_OUTPUT
+          else
+            echo "should_sync=true" >> $GITHUB_OUTPUT
+          fi
+          
+      # 步骤 2: 只有在不是 CNB 同步推送时，才执行同步到 CNB 的操作
       - name: Push to CNB Repository
         if: steps.check_sync.outputs.should_sync == 'true'
         run: |
+          # 请特别注意，每一行末尾的 \ 后面都没有空格！
           docker run --rm \
             -v ${{ github.workspace }}:${{ github.workspace }} \
             -w ${{ github.workspace }} \
@@ -24,7 +46,8 @@
             -e PLUGIN_AUTH_TYPE="https" \
             -e PLUGIN_USERNAME="xiyingruyi" \
             -e PLUGIN_PASSWORD=${{ secrets.CNB }} \
-            -e PLUGIN_FORCE="false" \  # 改成 false，避免覆盖
+            -e PLUGIN_FORCE="true" \
             -e PLUGIN_SYNC_MODE="push" \
             -e PLUGIN_PUSH_TAGS="true" \
             tencentcom/git-sync
+          echo "Synced to CNB successfully"
