--- a/.github/workflows/sync-to-cnb.yml
+++ b/.github/workflows/sync-to-cnb.yml
@@ -1,52 +1,31 @@
 name: Sync to CNB
 
-# 当代码推送到任何分支时触发同步
 on:
   push:
     branches:
-      - '**' # 匹配所有分支的推送操作
+      - '**'  # 所有分支
 
 jobs:
   sync:
-    # 确保只在 GitHub 的主仓库运行
-    if: github.repository == 'xiyingruyi/Stash-rules'
+    # 只在指定仓库运行（替换为你的仓库名）
+    if: github.repository == 'xiyingruyi/Stash-rules'  # 对于其他仓库，替换 repo 名
     runs-on: ubuntu-latest
     
     steps:
-      # 步骤 1: 检查代码到工作区（获取完整历史记录，这是 git-sync 的常见要求）
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 
+          fetch-depth: 0  # 完整历史
 
-      # 步骤 1.5: 【防止循环】检查提交信息是否包含CNB同步标记
-      - name: Check for CNB Sync Tag
-        id: check_sync
+      - name: Sync to CNB
         run: |
-          # 获取当前触发 Action 的 HEAD 提交信息
-          COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
-          
-          # 核心判断：如果提交信息包含 [CNB:SYNC] 标记，则跳过本次同步
-          # 这个标记必须由 CNB 在同步到 GitHub 时加入
-          if [[ $COMMIT_MESSAGE == *"[CNB:SYNC]"* ]]; then
-            echo "::notice file=README.md::Commit message contains [CNB:SYNC]. Skipping sync to CNB to prevent loop."
-            echo "should_sync=false" >> $GITHUB_OUTPUT
-          else
-            echo "should_sync=true" >> $GITHUB_OUTPUT
-          fi
-          
-      # 步骤 2: 只有在不是 CNB 同步推送时，才执行同步到 CNB 的操作
-      - name: Push to CNB Repository
-        if: steps.check_sync.outputs.should_sync == 'true'
-        run: |
-          # 请特别注意，每一行末尾的 \ 后面都没有空格！
           docker run --rm \
             -v ${{ github.workspace }}:${{ github.workspace }} \
             -w ${{ github.workspace }} \
-            -e PLUGIN_TARGET_URL="https://cnb.cool/xiyingruyi/Stash-rules.git" \
+            -e PLUGIN_TARGET_URL="https://cnb.cool/xiyingruyi/Stash-rules.git" \  # 替换 repo 名
             -e PLUGIN_AUTH_TYPE="https" \
-            -e PLUGIN_USERNAME="xiyingruyi" \
-            -e PLUGIN_PASSWORD=${{ secrets.CNB }} \
-            -e PLUGIN_FORCE="true" \
+            -e PLUGIN_USERNAME="xiyingruyi" \  # 你的 CNB 用户名
+            -e PLUGIN_PASSWORD=${{ secrets.CNB_TOKEN }} \  # CNB Token secret
+            -e PLUGIN_FORCE="true" \  # 强制覆盖
             -e PLUGIN_SYNC_MODE="push" \
             -e PLUGIN_PUSH_TAGS="true" \
             tencentcom/git-sync
