--- a/.github/workflows/sync-to-cnb.yml
+++ b/.github/workflows/sync-to-cnb.yml
@@ -1,32 +1,80 @@
-name: Sync to CNB
+name: Mirror to CNB Repository
 
 on:
+  # 在 main 分支有推送时触发工作流
   push:
     branches:
-      - '**'  # 所有分支
+      - main
+  # 也可以添加定时触发，例如每天凌晨 3 点同步一次
+  schedule:
+    # 每天凌晨 3 点（UTC 时间）运行
+    - cron: '0 3 * * *'
+  # 也可以手动在 Actions 页面触发
+  workflow_dispatch:
 
 jobs:
-  sync:
-    # 只在指定仓库运行（替换为你的仓库名）
-    if: github.repository == 'xiyingruyi/Stash-rules'  # 对于其他仓库，替换 repo 名
+  mirror_to_cnb:
     runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # 完整历史
 
-      - name: Sync to CNB
+    steps:
+      - name: Checkout Source Repository (GitHub)
+        # 使用 actions/checkout@v4 检出 GitHub 仓库代码
+        # 注意：此处不需要克隆到工作区，因为下一步是裸克隆
+        uses: actions/checkout@v4
+        with:
+          # 需要完整历史记录以便镜像推送
+          fetch-depth: 0
+
+      - name: Perform Mirror Sync to CNB
+        # 这一步执行实际的 Git 镜像同步操作
+        env:
+          # 从 GitHub Secrets 中获取 CNB 仓库的凭证
+          # 请确保您已在 GitHub 仓库设置中配置了以下 Secrets
+          CNB_USERNAME: ${{ secrets.CNB_USERNAME }}
+          CNB_PASSWORD: ${{ secrets.CNB_PASSWORD }} 
+        
         run: |
-          docker run --rm \
-            -v ${{ github.workspace }}:${{ github.workspace }} \
-            -w ${{ github.workspace }} \
-            -e PLUGIN_TARGET_URL="https://cnb.cool/xiyingruyi/Stash-rules.git" \  # 替换 repo 名
-            -e PLUGIN_AUTH_TYPE="https" \
-            -e PLUGIN_USERNAME="xiyingruyi" \  # 你的 CNB 用户名
-            -e PLUGIN_PASSWORD=${{ secrets.CNB_TOKEN }} \  # CNB Token secret
-            -e PLUGIN_FORCE="true" \  # 强制覆盖
-            -e PLUGIN_SYNC_MODE="push" \
-            -e PLUGIN_PUSH_TAGS="true" \
-            tencentcom/git-sync
-          echo "Synced to CNB successfully"
+          # -----------------------------------------------------------
+          # 1. 变量设置
+          # -----------------------------------------------------------
+          # 源仓库 (GitHub 仓库的本地路径)
+          SOURCE_REPO_PATH=$(pwd)
+          
+          # 目标 CNB 仓库 URL (使用环境变量中的凭证)
+          # 注意：请将 cnb.cool/xiyingruyi/Stash-rules.git 替换为您的 CNB 实际路径
+          CNB_URL="https://${CNB_USERNAME}:${CNB_PASSWORD}@cnb.cool/xiyingruyi/Stash-rules.git"
+
+          # -----------------------------------------------------------
+          # 2. 设置 Git 配置以允许推送
+          # -----------------------------------------------------------
+          git config --global user.email "ci-bot@github.com"
+          git config --global user.name "GitHub CI Bot"
+
+          # -----------------------------------------------------------
+          # 3. 执行镜像推送
+          # -----------------------------------------------------------
+          # Git Clone 默认创建的仓库不是裸仓库，为了安全和完整性，
+          # 切换到临时目录，创建一个裸仓库克隆，并进行镜像推送
+          
+          # 切换到一个临时目录
+          TEMP_DIR=$(mktemp -d)
+          cd $TEMP_DIR
+          
+          # 以镜像模式克隆当前 GitHub 仓库
+          echo "Cloning GitHub repository in mirror mode..."
+          git clone --mirror $SOURCE_REPO_PATH github_mirror.git
+          cd github_mirror.git
+
+          # 将目标 CNB 仓库设置为远程 origin (使用带认证的 URL)
+          echo "Setting CNB repository as remote origin..."
+          git remote set-url origin $CNB_URL
+          
+          # 执行镜像推送：将所有分支、标签、引用强制同步到 CNB
+          echo "Performing mirror push to CNB..."
+          git push --mirror
+          
+          # -----------------------------------------------------------
+          # 4. 清理 (可选, 因为是 Runner 上的临时目录，作业结束后会自动清理)
+          # -----------------------------------------------------------
+          cd $SOURCE_REPO_PATH
+          rm -rf $TEMP_DIR
