--- a/.github/workflows/sync-to-cnb.yml
+++ b/.github/workflows/sync-to-cnb.yml
@@ -2,33 +2,38 @@ name: Sync to CNB - All Branches
 
 on:
   push:
-    # 匹配所有分支的推送事件，不限制 specific branches
-    # ⚠️ 注意：这也会在创建新分支时触发
     branches:
-      - '**'
+      - '**'  # 匹配所有分支
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      # 1. 检出 GitHub 仓库代码
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          # 确保拉取所有历史记录
-          fetch-depth: 0
-          # 确保拉取所有分支（通常不需要显式设置，但为了安全可以加上）
-          # fetch-depth: 0 已经包含了所有历史和分支信息
+          fetch-depth: 0  # 拉取所有历史和分支
 
-      # 2. 同步到 CNB 仓库
       - name: Sync to CNB Repository
         run: |
-          # 获取当前触发工作流的分支名称
+          # 获取当前分支名称
           CURRENT_BRANCH_NAME="${{ github.ref_name }}"
-          echo "同步当前分支: $CURRENT_BRANCH_NAME 到 cnb.cool..."
-          
-          # 运行 git-sync Docker 镜像进行同步
-          # PLUGIN_BRANCH 设置为 CURRENT_BRANCH_NAME，确保推送到同名分支
+          echo "检查当前分支: $CURRENT_BRANCH_NAME 是否需要同步到 CNB..."
+
+          # 添加 CNB 远程仓库（公开仓库无需认证，私有仓库需 token）
+          git remote add cnb https://cnb.cool/xiyingruyi/Stash-rules.git
+          git fetch cnb --no-tags
+
+          # 检查当前分支是否领先于 CNB（避免循环）
+          commits_ahead=$(git rev-list --count cnb/$CURRENT_BRANCH_NAME..$CURRENT_BRANCH_NAME 2>/dev/null || echo 0)
+          if [ $commits_ahead -eq 0 ]; then
+            echo "无变更需要同步（仓库已一致或分支不存在）。"
+            exit 0
+          fi
+
+          echo "当前分支领先 $commits_ahead 个 commits，正在同步到 CNB..."
+
+          # 使用 git-sync 同步
           docker run --rm \
             -v ${{ github.workspace }}:${{ github.workspace }} \
             -w ${{ github.workspace }} \
@@ -37,7 +42,6 @@ jobs:
             -e PLUGIN_USERNAME="xiyingruyi" \
             -e PLUGIN_PASSWORD="${{ secrets.CNB }}" \
             -e PLUGIN_BRANCH="$CURRENT_BRANCH_NAME" \
+            -e PLUGIN_FORCE="false" \
+            -e PLUGIN_PUSH_TAGS="false" \
             tencentcom/git-sync
-        env:
-          # 引用你的 Secret 名称 CNB
-          CNB_ACCESS_TOKEN: ${{ secrets.CNB }}
