--- a/.cnb.yml
+++ b/.cnb.yml
@@ -1,22 +1,22 @@
-main:
+main:  # CNB 仓库的分支名；如果有其他分支，如 dev，复制整个结构
   push:
-    - name: Sync to GitHub
-      image: ubuntu:latest  # CNB 支持自定义镜像，包含 git 和 docker
-      env:
-        GITHUB_TOKEN: ${GITHUB_TOKEN}  # 引用密钥仓库中的环境变量，如果不生效，删除此行（script 中直接用 $GITHUB_TOKEN）
-      stages:
-        - name: Perform Sync
-          script:
-            - BRANCH=$(git branch --show-current)
-            - echo "检查当前分支: $BRANCH 是否需要同步到 GitHub..."
-            - git remote add github https://github.com/xiyingruyi/Stash-rules.git || true
-            - git fetch github --no-tags
-            - echo "git fetch 返回值: $?"
-            - COMMITS_AHEAD=$(git rev-list --count github/$BRANCH..$BRANCH 2>/dev/null || echo 0)
-            - echo "领先 commits 数: $COMMITS_AHEAD"
-            - if [ $COMMITS_AHEAD -eq 0 ]; then echo "无变更需要同步（仓库已一致或分支不存在）。"; exit 0; fi
-            - echo "当前分支领先 $COMMITS_AHEAD 个 commits，正在同步到 GitHub..."
-            - echo "GITHUB_TOKEN 值（遮罩前缀）: ${GITHUB_TOKEN:0:5}..."  # 调试 token 是否可用
-            - docker run --rm -v $(pwd):$(pwd) -w $(pwd) -e PLUGIN_TARGET_URL="https://github.com/xiyingruyi/Stash-rules.git" -e PLUGIN_AUTH_TYPE="https" -e PLUGIN_USERNAME="xiyingruyi" -e PLUGIN_PASSWORD="$GITHUB_TOKEN" -e PLUGIN_BRANCH="$BRANCH" -e PLUGIN_FORCE="false" -e PLUGIN_PUSH_TAGS="false" tencentcom/git-sync
-            - echo "git-sync 返回值: $?"
-      timeout: 10m
+    stages:
+      - name: Sync to GitHub
+        image: ubuntu:latest  # 基础镜像，包含 git 和 docker
+        environment:
+          - GITHUB_TOKEN  # 从 CNB 密钥仓库导入
+        script:
+          - BRANCH=$(git branch --show-current)
+          - echo "检查当前分支: $BRANCH 是否需要同步到 GitHub..."
+          - git remote add github https://github.com/xiyingruyi/Stash-rules.git || true
+          - echo "git remote add 返回值: $?"
+          - git fetch github --no-tags || true
+          - echo "git fetch 返回值: $?"
+          - COMMITS_AHEAD=$(git rev-list --count github/$BRANCH..$BRANCH 2>/dev/null || echo 0)
+          - echo "领先 commits 数: $COMMITS_AHEAD"
+          - echo "GITHUB_TOKEN 前缀 (调试): ${GITHUB_TOKEN:0:5}..."
+          - if [ $COMMITS_AHEAD -eq 0 ]; then echo "无变更需要同步（仓库已一致或分支不存在）。"; exit 0; fi
+          - echo "当前分支领先 $COMMITS_AHEAD 个 commits，正在同步到 GitHub..."
+          - docker run --rm -v $(pwd):$(pwd) -w $(pwd) -e PLUGIN_TARGET_URL="https://github.com/xiyingruyi/Stash-rules.git" -e PLUGIN_AUTH_TYPE="https" -e PLUGIN_USERNAME="xiyingruyi" -e PLUGIN_PASSWORD="$GITHUB_TOKEN" -e PLUGIN_BRANCH="$BRANCH" -e PLUGIN_FORCE="false" -e PLUGIN_PUSH_TAGS="false" tencentcom/git-sync
+          - echo "git-sync 返回值: $?"
+        timeout: 10m
