--- a/.cnb.yml
+++ b/.cnb.yml
@@ -1,22 +1,23 @@
-main:  # CNB 仓库的分支名；如果有其他分支，如 dev，复制整个结构
+main:  # CNB 仓库的分支名；如有 dev，复制结构
   push:
     stages:
       - name: Sync to GitHub
-        image: ubuntu:latest  # 基础镜像，包含 git 和 docker
+        image: alpine/git:latest  # 轻量 Git 镜像，CNB 支持
         environment:
-          - GITHUB_TOKEN  # 从 CNB 密钥仓库导入
+          - GIT_ACCESS_TOKEN  # 匹配密钥仓库中的名称
         script:
+          - echo "Pipeline 开始执行..."
           - BRANCH=$(git branch --show-current)
-          - echo "检查当前分支: $BRANCH 是否需要同步到 GitHub..."
-          - git remote add github https://github.com/xiyingruyi/Stash-rules.git || true
+          - echo "当前分支: $BRANCH"
+          - git remote add github https://xiyingruyi:$GIT_ACCESS_TOKEN@github.com/xiyingruyi/Stash-rules.git || true
           - echo "git remote add 返回值: $?"
           - git fetch github --no-tags || true
           - echo "git fetch 返回值: $?"
           - COMMITS_AHEAD=$(git rev-list --count github/$BRANCH..$BRANCH 2>/dev/null || echo 0)
           - echo "领先 commits 数: $COMMITS_AHEAD"
-          - echo "GITHUB_TOKEN 前缀 (调试): ${GITHUB_TOKEN:0:5}..."
+          - echo "GIT_ACCESS_TOKEN 前缀 (调试): ${GIT_ACCESS_TOKEN:0:5}..."
           - if [ $COMMITS_AHEAD -eq 0 ]; then echo "无变更需要同步（仓库已一致或分支不存在）。"; exit 0; fi
-          - echo "当前分支领先 $COMMITS_AHEAD 个 commits，正在同步到 GitHub..."
-          - docker run --rm -v $(pwd):$(pwd) -w $(pwd) -e PLUGIN_TARGET_URL="https://github.com/xiyingruyi/Stash-rules.git" -e PLUGIN_AUTH_TYPE="https" -e PLUGIN_USERNAME="xiyingruyi" -e PLUGIN_PASSWORD="$GITHUB_TOKEN" -e PLUGIN_BRANCH="$BRANCH" -e PLUGIN_FORCE="false" -e PLUGIN_PUSH_TAGS="false" tencentcom/git-sync
-          - echo "git-sync 返回值: $?"
+          - echo "领先 $COMMITS_AHEAD commits，正在同步到 GitHub..."
+          - git push github $BRANCH
+          - echo "git push 返回值: $?"
         timeout: 10m
