--- a/.cnb.yml
+++ b/.cnb.yml
@@ -1,4 +1,4 @@
-secrets:
+imports:
   - source: cnb
     repo: xiyingruyi/Secrets
     path: env.yml
@@ -15,9 +15,10 @@ main:
           - echo "Pipeline 开始执行..."
           - BRANCH=$(git branch --show-current)
           - echo "当前分支: $BRANCH"
+          - git status
           - echo "检查密钥加载..."
-          - if [ -z "$GIT_ACCESS_TOKEN" ]; then echo "错误: GIT_ACCESS_TOKEN 未设置！请检查 secrets 配置或 env.yml。"; exit 1; fi
-          - if [ -z "$GIT_USERNAME" ]; then echo "错误: GIT_USERNAME 未设置！默认使用 xiyingruyi。"; GIT_USERNAME="xiyingruyi"; fi
+          - if [ -z "$GIT_ACCESS_TOKEN" ]; then echo "错误: GIT_ACCESS_TOKEN 未设置！检查 imports 配置或 env.yml。"; exit 1; fi
+          - if [ -z "$GIT_USERNAME" ]; then echo "警告: GIT_USERNAME 未设置，使用默认 xiyingruyi。"; GIT_USERNAME="xiyingruyi"; fi
           - echo "GIT_ACCESS_TOKEN 前缀: ${GIT_ACCESS_TOKEN:0:5}..."
           - echo "GIT_USERNAME: $GIT_USERNAME"
           - git remote add github https://$GIT_USERNAME:$GIT_ACCESS_TOKEN@github.com/xiyingruyi/Stash-rules.git || true
@@ -26,8 +27,8 @@ main:
           - echo "git fetch 返回值: $?"
           - COMMITS_AHEAD=$(git rev-list --count github/$BRANCH..$BRANCH 2>/dev/null || echo 0)
           - echo "领先 commits 数: $COMMITS_AHEAD"
-          - if [ $COMMITS_AHEAD -eq 0 ]; then echo "无变更需要同步（仓库已一致）。"; exit 0; fi
-          - echo "领先 $COMMITS_AHEAD commits，正在同步..."
+          - if [ $COMMITS_AHEAD -eq 0 ]; then echo "无变更需要同步（仓库已一致或分支不匹配）。"; exit 0; fi
+          - echo "领先 $COMMITS_AHEAD commits，正在同步到 GitHub..."
           - git push github $BRANCH
           - echo "git push 返回值: $?"
         timeout: 10m
