--- a/.cnb.yml
+++ b/.cnb.yml
@@ -1,31 +1,42 @@
 main:
   push:
-    - imports:
+    - services:
+        - docker
+      imports:
         - https://cnb.cool/xiyingruyi/Secrets/-/blob/main/env.yml
       stages:
         - name: Sync to GitHub
-          image: alpine/git:latest
+          image: ubuntu:latest
           environment:
             - GIT_ACCESS_TOKEN
             - GIT_USERNAME
-          script:
-            - echo "Pipeline 开始执行..."
-            - BRANCH=$(git branch --show-current)
-            - echo "当前分支: $BRANCH"
-            - git status
-            - echo "检查密钥加载..."
-            - if [ -z "$GIT_ACCESS_TOKEN" ]; then echo "错误: GIT_ACCESS_TOKEN 未设置！检查 imports 或 env.yml。"; exit 1; fi
-            - if [ -z "$GIT_USERNAME" ]; then echo "警告: GIT_USERNAME 未设置，使用默认 xiyingruyi。"; GIT_USERNAME="xiyingruyi"; fi
-            - echo "GIT_ACCESS_TOKEN 前缀: ${GIT_ACCESS_TOKEN:0:5}..."
-            - echo "GIT_USERNAME: $GIT_USERNAME"
-            - git remote add github https://$GIT_USERNAME:$GIT_ACCESS_TOKEN@github.com/xiyingruyi/Stash-rules.git || true
-            - echo "git remote add 返回值: $?"
-            - git fetch github --no-tags || true
-            - echo "git fetch 返回值: $?"
-            - COMMITS_AHEAD=$(git rev-list --count github/$BRANCH..$BRANCH 2>/dev/null || echo 0)
-            - echo "领先 commits 数: $COMMITS_AHEAD"
-            - if [ $COMMITS_AHEAD -eq 0 ]; then echo "无变更需要同步（仓库已一致或分支不匹配）。"; exit 0; fi
-            - echo "领先 $COMMITS_AHEAD commits，正在同步到 GitHub..."
-            - git push github $BRANCH
-            - echo "git push 返回值: $?"
+          script: |
+            echo "Pipeline 开始执行..."
+            BRANCH=$(git branch --show-current)
+            echo "当前分支: $BRANCH"
+            git status
+            echo "检查密钥加载..."
+            if [ -z "$GIT_ACCESS_TOKEN" ]; then echo "错误: GIT_ACCESS_TOKEN 未设置！检查 imports 或 env.yml。"; exit 1; fi
+            if [ -z "$GIT_USERNAME" ]; then echo "警告: GIT_USERNAME 未设置，使用默认 xiyingruyi。"; GIT_USERNAME="xiyingruyi"; fi
+            echo "GIT_ACCESS_TOKEN 前缀: ${GIT_ACCESS_TOKEN:0:5}..."
+            echo "GIT_USERNAME: $GIT_USERNAME"
+            git remote add github https://$GIT_USERNAME:$GIT_ACCESS_TOKEN@github.com/xiyingruyi/Stash-rules.git || true
+            git fetch github --no-tags || true
+            echo "git fetch 返回值: $?"
+            COMMITS_AHEAD=$(git rev-list --count github/$BRANCH..$BRANCH 2>/dev/null || echo 0)
+            echo "领先 commits 数: $COMMITS_AHEAD"
+            if [ $COMMITS_AHEAD -eq 0 ]; then echo "无变更需要同步（仓库已一致或分支不匹配）。"; exit 0; fi
+            echo "领先 $COMMITS_AHEAD commits，正在同步到 GitHub..."
+            docker run --rm \
+              -v $(pwd):$(pwd) \
+              -w $(pwd) \
+              -e PLUGIN_TARGET_URL="https://github.com/xiyingruyi/Stash-rules.git" \
+              -e PLUGIN_AUTH_TYPE="https" \
+              -e PLUGIN_USERNAME="$GIT_USERNAME" \
+              -e PLUGIN_PASSWORD="$GIT_ACCESS_TOKEN" \
+              -e PLUGIN_BRANCH="$BRANCH" \
+              -e PLUGIN_FORCE="false" \
+              -e PLUGIN_PUSH_TAGS="false" \
+              tencentcom/git-sync
+            echo "git-sync 返回值: $?"
           timeout: 10m
