--- a/.cnb.yml
+++ b/.cnb.yml
@@ -5,7 +5,7 @@ main:
       imports:
         - https://cnb.cool/xiyingruyi/Secrets/-/blob/main/env.yml
       stages:
-        - name: Sync to GitHub
+        - name: Sync to GitHub (Same Branch)
           image: ubuntu:latest
           environment:
             - GIT_ACCESS_TOKEN
@@ -16,14 +16,14 @@ main:
             echo "当前分支: $BRANCH"
             git status
             echo "检查密钥加载..."
-            if [ -z "$GIT_ACCESS_TOKEN" ]; then echo "错误: GIT_ACCESS_TOKEN 未设置！检查 imports 或 env.yml allow_* 配置。"; exit 1; fi
+            if [ -z "$GIT_ACCESS_TOKEN" ]; then echo "错误: GIT_ACCESS_TOKEN 未设置！"; exit 1; fi
             if [ -z "$GIT_USERNAME" ]; then echo "警告: GIT_USERNAME 未设置，使用默认 xiyingruyi。"; GIT_USERNAME="xiyingruyi"; fi
             echo "GIT_ACCESS_TOKEN 前缀: ${GIT_ACCESS_TOKEN:0:5}..."
             echo "GIT_USERNAME: $GIT_USERNAME"
             COMMITS_AHEAD=$(git rev-list --count origin/$BRANCH..$BRANCH 2>/dev/null || echo 0)
             echo "领先 commits 数: $COMMITS_AHEAD"
             if [ $COMMITS_AHEAD -eq 0 ]; then echo "无变更需要同步（仓库已一致）。"; exit 0; fi
-            echo "领先 $COMMITS_AHEAD commits，正在同步到 GitHub..."
+            echo "领先 $COMMITS_AHEAD commits，正在同步到 GitHub 的同名分支 $BRANCH..."
             docker run --rm \
               -v $(pwd):$(pwd) \
               -w $(pwd) \
